# data-family-record-dot

./: CHANGELOG.md  README.md  data-family-record-dot.cabal
src/: DataFamily.hs  RecordUpdate.hs
